
We recommend JDK 1.3 or later, and have performed no testing on earlier JDKs.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

** Please also check out the JSP and Hibernate contributed projects **


Incompatible changes since 1.2
------------------------------
Binary compatible - Yes

Source compatible - Yes
  - v1.2 and v1.3 are source compatible in their public and protected API

Serialization compatible - Yes

Data compatible - Yes
  - DateTimeZone data updated to version 2006a


Deprecations since 1.2
----------------------
- Instant.toDateTimeISO
- Instant.toMutableDateTimeISO
    These were identical to the methods without the ISO suffix


Bug fixes since 1.2
-------------------
- DateTime/DateMidnight/MutableDateTime/AbstractInstant
   Conversion methods toDateTime, toDateTimeISO, toMutableDateTime, and
    toMutableDateTimeISO now preserve the time zone.
    Previously calling any of these four methods would convert the result to
    the default time zone. This was incorrect.
    The methods have been changed to preserve the time zone.
   The similarly named methods on Instant have not changed behaviour.

- Interval/MutableInterval.overlaps(ReadableInterval)
  Previously, this method didn't handle empty intervals correctly
  Now, an empty interval at the start of a larger interval does overlap

- DateTimeFormatterBuilder.MatchingParser
  Previously didn't estimate parsed length correctly

- YearMonthDay/TimeOfDay/Partial.Property
  Hashcode was not defined

- FixedDateTimeZone
  Hashcode was not defined


Enhancements since 1.2
----------------------


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team